refactor, admin and mod can create a pettype